--- a/Iterator/Iterator.csproj
+++ b/Iterator/Iterator.csproj
@@ -5,4 +5,19 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Update="InputFile.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>InputFile.txt</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="InputFile.txt">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>InputFile.Designer.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+
 </Project>
