--- a/Command/Lib/Lib.csproj
+++ b/Command/Lib/Lib.csproj
@@ -42,10 +42,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Command.cs" />
-    <Compile Include="ConcreteCommad.cs" />
+    <Compile Include="InversionCommand.cs" />
     <Compile Include="Invoker.cs" />
+    <Compile Include="MultiplicationCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Receiver.cs" />
+    <Compile Include="SumCommand.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
