--- a/Command/Lib/Lib.csproj
+++ b/Command/Lib/Lib.csproj
@@ -42,9 +42,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Command.cs" />
+    <Compile Include="ICommand.cs" />
     <Compile Include="CommandProcessor.cs" />
     <Compile Include="InversionCommand.cs" />
-    <Compile Include="Invoker.cs" />
     <Compile Include="MultiplicationCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SumCommand.cs" />
