--- a/AbstractFactory/Lib/Lib.csproj
+++ b/AbstractFactory/Lib/Lib.csproj
@@ -44,11 +44,15 @@
     <Compile Include="Command.cs" />
     <Compile Include="ICommand.cs" />
     <Compile Include="CommandProcessor.cs" />
+    <Compile Include="ICommandFactory.cs" />
     <Compile Include="ILogger.cs" />
     <Compile Include="InversionCommand.cs" />
+    <Compile Include="InversionCommandFactory.cs" />
     <Compile Include="MultiplicationCommand.cs" />
+    <Compile Include="MultiplicationCommandFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SumCommand.cs" />
+    <Compile Include="SumCommandFactory.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
