--- a/AbstractFactory/AbstractFactory/AbstractFactory.csproj
+++ b/AbstractFactory/AbstractFactory/AbstractFactory.csproj
@@ -5,4 +5,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Lab2\Lab2.csproj" />
+    <ProjectReference Include="..\Lib\Lib.csproj" />
+  </ItemGroup>
+
 </Project>
