--- a/AbstractFactory/AbstractFactory.csproj
+++ b/AbstractFactory/AbstractFactory.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Lab2\Lab2.csproj" />
+    <ProjectReference Include="..\ConsoleLogger\ConsoleLogger.csproj" />
     <ProjectReference Include="..\Lib\Lib.csproj" />
   </ItemGroup>
 
